--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
     "dev": "turbo run dev",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "check-types": "turbo run check-types"
+    "check-types": "turbo run check-types",
+    "db:generate": "cd packages/db && npx prisma generate && cd ../..",
+    "db:migrate": "cd packages/db && npx prisma migrate dev && cd ../..",
+    "start:backend": "npm run db:migrate  && cd apps/http-server && pnpm run start",
+    "build:frontend": "npm run db:migrate  && cd apps/web && pnpm run build && cd ../..",
+    "start:frontend": "cd apps/web && pnpm run start"
   },
   "devDependencies": {
     "prettier": "^3.6.2",
