--- a/.github/workflows/backend_cd.yml
+++ b/.github/workflows/backend_cd.yml
@@ -19,7 +19,7 @@ jobs:
               uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
               with:
                 context: .
-                file: ./docker/Dockerfile.backend
+                file: ./docker/dockerfile.backend
                 push: true
                 tags: harsharora17/harsharora17/my_backend:${{ github.sha }}
             - name: Execute remote SSH commands using SSH key
