fixed ssh part 3

--- a/.github/workflows/backend_cd.yml
+++ b/.github/workflows/backend_cd.yml
@@ -22,6 +22,8 @@ jobs:
                 file: ./docker/dockerfile.backend
                 push: true
                 tags: harsharora17/my_backend:${{ github.sha }}
+            - name: print sha
+              run: echo ${{ github.sha }}
             - name: Execute remote SSH commands using SSH key
               uses: appleboy/ssh-action@v1
               with:
