fixed ssh part 6

--- a/.github/workflows/backend_cd.yml
+++ b/.github/workflows/backend_cd.yml
@@ -32,6 +32,6 @@ jobs:
                 key: ${{ secrets.KEY }}
                 port: ${{ secrets.PORT }}
                 script: |
-                    sudo docker stop my_backend && sudo docker rm my_backend && docker pull harsharora17/my_backend:${{ github.sha }} && sudo docker run -e DATABASE_URL=${{secrets.DB_URL}}--name my_backend -p 3001:3001 -d harsharora17/my_backend:${{ github.sha }}
+                    sudo docker stop my_backend && sudo docker rm my_backend && sudo docker pull harsharora17/my_backend:${{ github.sha }} && sudo docker run -e DATABASE_URL=${{secrets.DB_URL}}--name my_backend -p 3001:3001 -d harsharora17/my_backend:${{ github.sha }}
 
 
