--- a/.github/workflows/backend_cd.yml
+++ b/.github/workflows/backend_cd.yml
@@ -25,7 +25,7 @@ jobs:
             - name: print sha
               run: echo ${{ github.sha }}
             - name: Execute remote SSH commands using SSH key
-              uses: appleboy/ssh-action@ssh-action@v1 
+              uses: appleboy/ssh-action@v1 
               with:
                 host: ${{ secrets.HOST }}
                 username: ${{ secrets.USERNAME }}
