--- a/.github/workflows/backend_cd.yml
+++ b/.github/workflows/backend_cd.yml
@@ -22,8 +22,15 @@ jobs:
                 file: ./docker/dockerfile.backend
                 push: true
                 tags: harsharora17/my_backend:${{ github.sha }}
-            - name: print sha
-              run: echo ${{ github.sha }}
+            - name: Authorize SSH Connections
+              uses: mnavarrocarter/authorize-aws-security-group-ingress-action@v1.0.0
+              with:
+                aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+                aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+                aws-region: 'us-east-1'
+                aws-security-group-id: ${{ secrets.AWS_SSH_SECURITY_GROUP_ID }}
+                protocol: 'tcp'
+                port: ${{ secrets.PORT }}
             - name: Execute remote SSH commands using SSH key
               uses: appleboy/ssh-action@v1 
               with:
