--- a/.github/workflows/backend_cd.yml
+++ b/.github/workflows/backend_cd.yml
@@ -31,20 +31,20 @@ jobs:
                 aws-security-group-id: ${{ secrets.AWS_SSH_SECURITY_GROUP_ID }}
                 protocol: 'tcp'
                 port: ${{ secrets.PORT }}
-            - name: Build & Deploy
-              env:
-                PRIVATE_KEY: ${{ secrets.KEY }}
-                HOSTNAME: ${{secrets.HOST}}
-                USER_NAME: ${{secrets.USERNAME}}
-              run: |
-                   echo "$KEY" > private_key && chmod 600 private_key
-                   ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOSTNAME}
-                   sudo docker stop my_backend
-                   sudo docker rm my_backend
-                   sudo docker rmi -f harsharora17/my_backend
-                   sudo docker pull harsharora17/my_backend:${{ github.sha }}
-                   sudo docker run -e DATABASE_URL=${{secrets.DB_URL}} --name my_backend -p 3001:3001 -d harsharora17/my_backend:${{ github.sha }}
-
+          
+            - name: Execute remote SSH commands using SSH key
+              uses: appleboy/ssh-action@v1 
+              with:
+                host: ${{ secrets.HOST }}
+                username: ${{ secrets.USERNAME }}
+                key: ${{ secrets.KEY }}
+                port: ${{ secrets.PORT }}
+                script: |
+                    sudo docker stop my_backend 
+                    sudo docker rm my_backend 
+                    sudo docker rmi -f harsharora17/my_backend 
+                    sudo docker pull harsharora17/my_backend:${{ github.sha }} 
+                    sudo docker run -e DATABASE_URL=${{secrets.DB_URL}} --name my_backend -p 3001:3001 -d harsharora17/my_backend:${{ github.sha }}
          
 
 
