ssh action changed

--- a/.github/workflows/backend_cd.yml
+++ b/.github/workflows/backend_cd.yml
@@ -33,12 +33,12 @@ jobs:
                 port: ${{ secrets.PORT }}
 
             - name: Execute remote SSH commands using SSH key
-              uses: appleboy/ssh-action@v1.2.2 
+              uses: LuisEnMarroquin/setup-ssh-action@v3.0.0 
               with:
-                host: ${{ secrets.HOST }}
-                username: ${{ secrets.USERNAME }}
-                key: ${{ secrets.KEY }}
-                port: ${{ secrets.PORT }}
+                ORIGIN: ${{ secrets.HOST }}
+                USER: ${{ secrets.USERNAME }}
+                SSHKEY: ${{ secrets.KEY }}
+                PORT: ${{ secrets.PORT }}
                 script: |
                     sudo docker stop my_backend 
                     sudo docker rm my_backend 
